# classical-text-browser

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  install.bat  install.sh  pyproject.toml  start_server.bat  start_server.sh
docs/: D-008_bibliography_verification.md  DECISIONS.md  architecture-diagrams.md  core-schema-v1.3.md  llm_architecture_design.md  operation-rules-v1.0.md  phase10_1_ocr_session.md  phase10_2_llm_session.md  phase10_3_alignment_session.md  phase11_2_translation_session.md  phase11_3_annotation_session.md  phase12_3_json_snapshot_session.md  platform-v7.md  schema-overview.md  schema_overview.html  session_navigator.md  user-guide.md
docs/sessions/: phase10_12_design_pointer.md  phase10_2_llm_session.md  phase10_4_korcis_session.md  phase11_1_hyeonto_session.md  phase12_1_git_graph_session.md  phase12_design.md  session_fix_parsers.md
examples/: generate_dummy_pdf.py  register_dummy.py  step10_git_log.json  step4_bibliography_saved.json  step4_ndl_map_test.json  step4_ndl_search.json  step5_layout_page1.json  step8_entity_ids.json  step8_summary.json  step9_dependency.json  walkthrough_monggu.md
examples/monggu_library/: library_manifest.json
resources/: annotation_types.json  block_types.json  punctuation_presets.json  variant_chars.json
schemas/: README.md  exchange.schema.json
schemas/core/: agent.schema.json  concept.schema.json  relation.schema.json  tag.schema.json  text_block.schema.json  work.schema.json
schemas/interp/: annotation_page.schema.json  citation_mark_page.schema.json  hyeonto_page.schema.json  punctuation_page.schema.json  translation_page.schema.json
schemas/source_repo/: bibliography.schema.json  corrections.schema.json  dependency.schema.json  interp_manifest.schema.json  layout_page.schema.json  manifest.schema.json  ocr_page.schema.json
src/app/: __main__.py  _state.py  server.py
src/app/routers/: __init__.py  alignment.py  annotation.py  documents.py  interpretations.py  library.py  llm_ocr.py  reading.py  version.py
src/app/static/: index.html
src/app/static/css/: workspace.css
src/app/static/js/: alignment-view.js  annotation-editor.js  batch-correction.js  bibliography.js  citation-editor.js  cite-format-manager.js  composition-editor.js  correction-editor.js  create-document.js  entity-manager.js  git-graph.js  hwp-import.js  hyeonto-editor.js  interpretation.js  koten-layout-detector.js  layout-editor.js  notes-panel.js  ocr-panel.js  pdf-renderer.js  punctuation-editor.js  reader-line.js  sidebar-tree.js  text-editor.js  toast.js  translation-editor.js  variant-manager.js  workspace.js
src/cli/: __main__.py
src/core/: alignment.py  annotation.py  annotation_dict_io.py  annotation_dict_llm.py  annotation_dict_match.py  annotation_llm.py  annotation_types.py  app_config.py  backup.py  citation_mark.py  document.py  entity.py  git_graph.py  hyeonto.py  interpretation.py  layout_analyzer.py  library.py  punctuation.py  punctuation_llm.py  snapshot.py  snapshot_validator.py  translation.py  translation_llm.py
src/hwp/: __init__.py  reader.py  text_cleaner.py
src/llm/: __init__.py  config.py  draft.py  router.py  usage_tracker.py
src/llm/bridge/: invoke.js  invoke_vision.js
src/llm/prompts/: annotation.yaml  annotation_dict_stage1.yaml  annotation_dict_stage2.yaml  annotation_dict_stage3.yaml  layout_analysis.yaml  punctuation.yaml  translation.yaml
src/llm/providers/: __init__.py  anthropic_provider.py  base.py  base44_bridge.py  base44_http.py  gemini_provider.py  ollama.py  openai_provider.py
src/ocr/: __init__.py  base.py  image_utils.py  llm_ocr_engine.py  ndlkotenocr_engine.py  ndlkotenocr_full_engine.py  ndlocr_engine.py  paddleocr_engine.py  pipeline.py  registry.py
src/ocr/ndlkotenocr/: __init__.py  rtmdet.py  trocr.py
src/ocr/ndlkotenocr/config/: ndl.yaml
src/ocr/ndlocr/: __init__.py  parseq.py
src/ocr/ndlocr/reading_order/order/: reorder.py
src/ocr/ndlocr/reading_order/xy_cut/: block_xy_cut.py
src/parsers/: __init__.py  archives_jp.py  asset_detector.py  base.py  generic_llm.py  iiif_utils.py  korcis.py  ndl.py  registry.json
src/text_import/: __init__.py  common.py  pdf_extractor.py  text_separator.py
tests/: test_alignment_core.py  test_alignment_integration.py  test_alignment_models.py  test_alignment_page.py  test_alignment_variant.py  test_annotation.py  test_annotation_dict_io.py  test_annotation_dict_match.py  test_asset_detector.py  test_citation_mark.py  test_git_graph.py  test_korcis.py  test_llm_integration.py  test_ocr_base.py  test_ocr_image_utils.py  test_ocr_integration.py  test_ocr_paddle.py  test_ocr_pipeline.py  test_ocr_registry.py  test_parsers.py  test_punctuation_hyeonto.py  test_snapshot.py  test_text_cleaner.py  test_text_import_align.py  test_translation.py
