[project]
name = "classical-text-browser"
version = "0.1.0"
description = "고전서지 통합 브라우저 — 사람과 LLM이 함께 고전 텍스트를 읽고 번역하고 연구하는 통합 작업 환경"
readme = "README.md"
license = "LicenseRef-PolyForm-Noncommercial-1.0.0"
requires-python = ">=3.10"
authors = [
    { name = "hw725" },
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "gitpython>=3.1.0",
    "jsonschema>=4.20.0",
    "httpx>=0.27.0",
    "lxml>=5.0.0",
    "fpdf2>=2.8.5",
    "cssselect>=1.4.0",
    "pymupdf>=1.27.1",
    "pillow>=12.1.1",
    "pyyaml>=6.0.3",
    "anthropic>=0.79.0",
    "openai>=1.50.0",
    "google-genai>=1.0.0",
    "hwp-hwpx-parser>=1.0.0",
    "python-multipart>=0.0.22",
    "regex>=2026.2.19",
]

# PaddleOCR 선택 설치(extra): uv sync --extra paddleocr
# paddlepaddle ~500MB. Python 3.13+에서는 3.x가 설치된다.
# Windows + Python 3.13 + PaddlePaddle 3.x(CPU)에서 OneDNN 런타임 오류 가능.
[project.optional-dependencies]
paddleocr = [
    "paddlepaddle>=3.3.0",
    "paddleocr>=2.10.0",
]
# NDLOCR-Lite 선택 설치(extra): uv sync --extra ndlocr
# ONNX 기반 오프라인 OCR — 한문(CJK 한자)/일본어 전용. 한글 미지원.
# Python 3.10+ 호환. PaddleOCR이 동작하지 않는 Python 3.13 환경의 대안.
# 원본: https://github.com/ndl-lab/ndlocr-lite (CC BY 4.0, National Diet Library, Japan)
ndlocr = [
    "onnxruntime>=1.20.0",
    "networkx>=3.0",
    "ordered-set>=4.1.0",
    "tqdm>=4.60.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/core", "src/parsers", "src/cli", "src/app", "src/ocr", "src/llm", "src/hwp", "src/text_import"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
